Store executed command info in marker
* This way we can easily know what each marker does,
and they can easily be deleted to repeat different steps.